Demonstrate delete_by_filter